# axum-connect

./: .gitignore  Cargo.toml  README.md  buf.yaml  flake.nix
axum-connect/: Cargo.toml
axum-connect-build/: Cargo.toml
axum-connect-build/src/: gen.rs  lib.rs
axum-connect-crosstest/: Cargo.toml  build.rs
axum-connect-crosstest/frontend/: buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
axum-connect-crosstest/frontend/src/: main.ts
axum-connect-crosstest/src/: main.rs
axum-connect-examples/: Cargo.toml  build.rs
axum-connect-examples/client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
axum-connect-examples/client/src/: app.tsx  main.tsx
axum-connect-examples/proto/: buf.yaml  hello.proto
axum-connect-examples/src/: error.rs  main.rs
axum-connect/src/: error.rs  handler.rs  lib.rs  message.rs  parts.rs  response.rs  router.rs
axum-connect/src/handler/: codec.rs  handler_stream.rs  handler_unary.rs  mod.rs
