[package]
name = "axum-connect-build"
version = "0.1.3"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2021"
categories = [
  "network-programming",
  "web-programming",
  "web-programming::http-server",
]
description = "Connect-Web RPC code generator for axum-connect"
keywords = ["rpc", "axum", "protobuf", "connect"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AThilenius/axum-connect"

[dependencies]
anyhow = "1.0"
convert_case = "0.6.0"
pbjson-build = "0.5.1"
proc-macro2 = "1.0.56"
prost = "0.11.9"
prost-build = "0.11.9"
prost-reflect = "0.11.4"
protoc-fetcher = "0.1.0"
quote = "1.0.26"
syn = "2.0.15"
