[package]
name = "axum-connect-build"
version = "0.5.3"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2021"
categories = [
  "network-programming",
  "web-programming",
  "web-programming::http-server",
]
description = "Connect-Web RPC code generator for axum-connect"
keywords = ["rpc", "axum", "protobuf", "connect"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AThilenius/axum-connect"

[dependencies]
anyhow = "1.0.95"
convert_case = "0.7.1"
pbjson-build = "0.7.0"
proc-macro2 = "1.0.93"
prost = ">=0.13,<0.14"
prost-build = ">=0.13,<0.14"
prost-reflect = "0.14.5"
protoc-fetcher = "0.1.2"
quote = "1.0.38"
syn = "2.0.96"
