[package]
name = "axum-connect-crosstest"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = "0.6.9"
axum-connect = { path = "../axum-connect" }
prost = "0.11.9"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }

[build-dependencies]
axum-connect-build = { path = "../axum-connect-build" }
