[package]
name = "axum-connect-example"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-stream = "0.3.5"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-connect = { path = "../axum-connect", features = ["axum-extra"] }
prost = "0.12.1"
thiserror = "1.0.57"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }

[build-dependencies]
axum-connect-build = { path = "../axum-connect-build" }
