[package]
name = "axum-connect"
version = "0.5.3"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2021"
categories = [
  "network-programming",
  "web-programming",
  "web-programming::http-server",
]
description = "Connect-Web RPC for Axum"
keywords = ["rpc", "axum", "protobuf", "connect"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AThilenius/axum-connect"

[dependencies]
async-trait = "0.1.85"
axum = { version = ">=0.8", features = ["multipart"] }
axum-extra = { version = "0.10.0", optional = true }
base64 = "0.22.1"
futures = "0.3.31"
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = ">=0.13,<0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13.0"
